app/components/auth/emailVerification/emailVerification.scss
.emailVerificationContainer {
  max-width: $container_width;
  margin: 0 auto;
  margin-top: 60px;

  .innerContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    border-radius: 2px;
    background-color: #fff;
  }
}

.title {
  margin-top: 50px;
  font-size: 15px;
  font-weight: 500;
  letter-spacing: 2.7px;
  text-align: center;
  color: $gray6;
}

.content {
  margin-top: 23px;
  font-size: 15px;
  line-height: 1.47;
  text-align: center;
  color: $gray5;
  white-space: pre-line;
  text-align: center;
}

.emailVerificationCompleteIconWrapper {
  margin-top: 43px;

  svg {
    width: 81.5px;
    height: 81.5px;
  }
}

.confirmButton {
  margin-top: 60.5px;
  @include common-button($gray2);
}

.resendEmailButton {
  margin-top: 50px;
  @include common-button($main_blue0);
}

.emailVerificationFailIconWrapper {
  margin-top: 38.5px;

  svg {
    width: 68px;
    height: 68px;
  }
}

.toEmail {
  margin-top: 12.2px;
  font-size: 15px;
  color: $gray5;
  line-height: 1.47;

  .email {
    color: $black0;
  }
}

.isLoadingContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  margin-top: 125.5px;
  width: 403px;
  height: 392.5px;
  border-radius: 2px;
  background-color: #fff;
  border: solid 1px $gray3;
}

